--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development-small:
   <<: *default
   database: workships_development
 
-development:
+development-ext:
   <<: *default
   database: workships_ext
 
@@ -35,7 +35,7 @@ test-sqlserver:
   password: workships
   timeout: 20000000
 
-development-sqlserver:
+development:
   mode: dblib
   pool: 5
   adapter: sqlserver
