--- a/config/database.yml
+++ b/config/database.yml
@@ -16,8 +16,11 @@ development:
   <<: *default
   database: workships_app
   username: workships
-  password: YulIdZ7K52b6J
   port: 5433
+
+onpremise:
+  <<: *default
+  database: workships_app
 
 protractor:
   <<: *default
@@ -26,10 +29,6 @@ protractor:
 test:
   <<: *default
   database: workships_test
-
-test-old:
-  <<: *default
-  database: workships_test_old
 
 test-sqlserver:
   mode: dblib
@@ -75,7 +74,3 @@ production-sqlserver:
   username: workships
   password: workships
   timeout: 20000000
-
-onpremise:
-  <<: *default
-  database: workships_development
