--- a/templates/ssl-params.conf
+++ b/templates/ssl-params.conf
@@ -1,8 +1,8 @@
 # from https://cipherli.st/
 # and https://raymii.org/s/tutorials/Strong_SSL_Security_On_nginx.html
 
-ssl_certificate /etc/ssl/certs/sa-onpremise.crt;
-ssl_certificate_key /etc/ssl/private/sa-onpremise.key;
+ssl_certificate /etc/ssl/certs/step-ahead.com.crt;
+ssl_certificate_key /etc/ssl/private/step-ahead.com.key;
 
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 ssl_prefer_server_ciphers on;
