--- a/templates/step-ahead.com.conf
+++ b/templates/step-ahead.com.conf
@@ -6,7 +6,15 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name step-ahead.com;
+    server_name stepahead.step-ahead.com;
+    root /home/app/html;
+
+    include snippets/ssl-params.conf;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name stepaheadapp.step-ahead.com;
     root /home/app/sa/public;
 
     passenger_enabled on;
