--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -84,7 +84,7 @@ linters:
     enabled: true
 
   PropertySortOrder:
-    enabled: true
+    enabled: false
     ignore_unspecified: false
 
   PropertySpelling:
