--- a/templates/env-vars.conf
+++ b/templates/env-vars.conf
@@ -7,10 +7,10 @@ env POSTGRES_PASSWORD;
 
 env SECRET_KEY;
 
-env COMPANY_NAME
-env ADMIN_USER_NAME
-env ADMIN_USER_EMAIL
+env COMPANY_NAME;
+env ADMIN_USER_NAME;
+env ADMIN_USER_EMAIL;
 
-env SSL_CERT_FILE_PATH
-env SSL_KEY_FILE_PATH
-env SSL_PARAMS_CONF_PATH
+env SSL_CERT_FILE_PATH;
+env SSL_KEY_FILE_PATH;
+env SSL_PARAMS_CONF_PATH;
