--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -25,3 +25,11 @@ WORKDIR /home/app/sa
 COPY --chown=app:app Gemfile Gemfile
 COPY --chown=app:app Gemfile.lock Gemfile.lock
 RUN rvm-exec 2.4.4 bundle install --without development test production
+
+# Sudo
+USER root
+RUN apt-get update
+RUN apt-get -y -qq install sudo
+
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
