--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development-sndcom:
   <<: *default
   database: workships_ext
 
-development:
+development-qqq:
   <<: *default
   host: localhost
   database: workships_ext
@@ -20,7 +20,8 @@ development:
   password: workships
   port: 5432
 
-onpremise:
+#onpremise:
+development:
   <<: *default
   database: workships_app
 
