--- a/config/database.yml
+++ b/config/database.yml
@@ -31,6 +31,11 @@ protractor:
 
 test:
   <<: *default
+  host: localhost
+  database: workships_ext
+  username: workships
+  password: workships
+  port: 5432
   database: workships_test
 
 test-sqlserver:
