--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -19,6 +19,9 @@ RUN chown app:app /home/app/sa
 RUN mkdir /home/app/html
 RUN chown app:app /home/app/html
 
+VOLUME ["/etc"]
+VOLUME ["/home/app/sa/config"]
+
 USER app
 WORKDIR /home/app/sa
 
