Fix bug of when duplicating a questionnaire

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,10 @@ protractor:
 
 test:
   <<: *default
+  datebase: localhost
+  port: 5432
+  username: workships
+  password: workships
   database: workships_test
 
 test-old:
