--- a/templates/ssl-params.conf.template
+++ b/templates/ssl-params.conf.template
@@ -1,11 +1,8 @@
 # from https://cipherli.st/
 # and https://raymii.org/s/tutorials/Strong_SSL_Security_On_nginx.html
 
-# ssl_certificate /etc/ssl/certs/step-ahead.com.crt;
-# ssl_certificate_key /etc/ssl/private/step-ahead.com.key;
-
-ssl_certificate SSL_CERT_FILE;
-ssl_certificate_key SSL_KEY_FILE;
+ssl_certificate /etc/ssl/certs/step-ahead.com.crt;
+ssl_certificate_key /etc/ssl/private/step-ahead.com.key;
 
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 ssl_prefer_server_ciphers on;
