--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -29,7 +29,7 @@ RUN rvm-exec 2.4.4 bundle install --without development test production
 # Sudo
 USER root
 RUN apt-get update
-RUN apt-get -y -qq install sudo
+RUN apt-get -y -qq install sudo openssh-server
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
