fix interact get_map

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ development-sndcom:
 
 development:
   <<: *default
-  database: workships_development
+  database: workships_interact
   username: workships
   password: workships
   port: 5432
