--- a/config/database.yml
+++ b/config/database.yml
@@ -8,16 +8,10 @@ default: &default
   password: <%= ENV['POSTGRES_PASSWORD'] || 'postgres' %>
   timeout: 5000
 
-development-dev:
-  <<: *default
-  database: workships_development
-  username: workships
-  password: workships
-  port: 5432
-
 development:
   <<: *default
-  database: workships_interact
+  database: workships_development
+  #database: workships_interact
   username: workships
   password: workships
   port: 5432
