--- a/config/database.yml
+++ b/config/database.yml
@@ -10,11 +10,11 @@ default: &default
 
 development:
   <<: *default
-  database: workships_development
-  #database: workships_interact
-  username: workships
-  password: workships
-  port: 5432
+  #database: workships_development
+  #username: workships
+  #password: workships
+  #port: 5432
+  database: workships_app
 
 onpremise:
   <<: *default
