distinguish between regular snapshots and interact ones

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
 
 development:
   <<: *default
-  database: workships_interact
+  database: workships_ext
   username: workships
   password: workships
   port: 5432
