office365 meetings tests

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,8 @@ development:
 onpremise:
   <<: *default
   database: workships_app
+  password: YulIdZ7K52b6J
+  port: 5433
 
 protractor:
   <<: *default
