--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
 
 development:
   <<: *default
-  database: workships_ext
+  database: workships_interact
   username: workships
   password: workships
   port: 5432
@@ -18,7 +18,6 @@ development:
 onpremise:
   <<: *default
   database: workships_app
-  port: 5432
 
 protractor:
   <<: *default
