--- a/templates/step-ahead.com.conf
+++ b/templates/step-ahead.com.conf
@@ -6,7 +6,7 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name portal.step-ahead.com;
+    server_name portal.2stepahead.com;
     root /home/app/html;
 
     include snippets/ssl-params.conf;
@@ -14,7 +14,7 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name app.step-ahead.com;
+    server_name app.2stepahead.com;
     root /home/app/sa/public;
 
     passenger_enabled on;
