--- a/config/database.yml
+++ b/config/database.yml
@@ -1,49 +1,62 @@
-default: &default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] || 'localhost' %>
-  port: <%= ENV['POSTGRES_PORT_5432_TCP_PORT'] || 5432 %>
-  username: <%= ENV['POSTGRES_USER'] || 'postgres' %>
-  password: <%= ENV['POSTGRES_PASSWORD'] || 'postgres' %>
-  timeout: 5000
-
 development:
-  <<: *default
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] || 'localhost' %>
   database: workships_sndcom
   username: postgres
   password: postgres
   port: 5432
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
+
+
 
 onpremise:
-  <<: *default
   database: workships_app
-  port: 5433
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] || 'localhost' %>
+  username: postgres
+  password: postgres
+  port: 5432
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
+
 
 protractor:
-  <<: *default
   database: workships_protractor
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] || 'localhost' %>
+  username: postgres
+  password: postgres
+  port: 5432
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
+
 
 test:
-  <<: *default
   host: localhost
-  port: 5434
+  port: 5432
   database: workships_test
   username: postgres
   password: postgres
-
-development-sqlserver:
-  mode: dblib
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  adapter: sqlserver
-  database: stepahead_app_db
-  host: 192.168.1.123
-  port: 1433
-  username: workships
-  password: workships
-  timeout: 20000000
+  timeout: 5000
+
+
+
 
 # for on premise installtion
 production:
-  <<: *default
   database: workships_app
+  host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] || 'localhost' %>
+  username: postgres
+  password: postgres
+  port: 5432
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  timeout: 5000
